2001-09-17  Dancer Vesperman  <dancer@users.sourceforge.net>

	* Watch and learn. C++ _does_ have semantic eqivalents to malloc() and free(). They are ::operator new() and ::operator delete() (which are not the same as new and delete). This ensures we end up using the same thread-safe allocators. calloc() and malloc() semantics and type-casts are all bound up in two simple inline templates.

2001-09-16  Dancer Vesperman  <dancer@users.sourceforge.net>

	* audio/Audio.cc: Use C++ style casts.
	* audio/Mixer.cc: Use C++ style casts.
	* audio/pcb.h: Use C++ style casts.
	* audio/xmidi.cc: Partial conversion to C++

2001-09-16  Dancer Vesperman  <dancer@users.sourceforge.net>

	* Actorio.cc: Use C++ style casts.
	* mouse.h: Use C++ style casts.

2001-09-15  Jeff Freedman  <jeff@amy.nerble.net>

	* Many:  Fixed a bunch of bugs involving fighting on List Field.

	* objs/egg.cc (Egg_object): Fixed eggs once again.
	* combat.cc: Don't set duelists into combat mode when struck.
	* intrinsics.cc: Separated out 'create_new_object2()'.

2001-09-15  Dancer Vesperman  <dancer@users.sourceforge.net>

	* acconfig.h, configure.in: Check for gtk support seperately to exult studio.

2001-09-14  Jeff Freedman  <jeff@amy.nerble.net>

	* intrinsics.cc:  Treat 'last_created' as a 1-element stack.
	* mouse.cc (Mouse): Avatar's speed depends on gwin->std_delay.
	* objs.cc:  Check_mask() rewritten.
	* ucinternal.cc:  Sort list returned by find_nearby().

2001-09-13  Jeff Freedman  <jeff@amy.nerble.net>

	* gamewin.h,etc: Added get_std_delay() for standard frame delay.
	FPS is read from config file ("config/video/fps").

2001-09-14  Dancer Vesperman  <dancer@users.sourceforge.net>

	* gamewin.cc: Fixed spelling error in output text.

2001-09-13  Tristan Tarrant <nadir@users.sourceforge.net>
	* game.cc: make menu more compact when entries are missing
	* data/quotes.txt: added a quote by Max

2001-09-12  Jeff Freedman  <jeff@amy.nerble.net>
